
  These are the equivalents of modkore's _inStatus and _outStatus options.
- useSelf_skill_#_whenAffected
  useSelf_item_#_whenAffected

  Activate skill/use item only if your character have a certain status
  ailment/look, like poisoned, hidden, etc. Take a look at
  skillslooks.txt, skillsstate.txt and skillsailments.txt in the latest
  tablepack for a list of names.
- equipAuto_*


Bug fixes:
- Fixed comma placement in formatNumber sub (its what puts the commas
  in your zenny amount.
- When in X-Kore mode, the RO client will still work if you shutdown
  Kore. However, you can't start Kore in X-Kore mode again until you've
  restarted the RO client.
- Kore will now correctly continue if it gets resurrected before respawn.
- avoid_ignore now works properly.
- Kore now works correctly on eathena servers.
- Damage numbers above 65535 (e.g. from Guillotine Fist) should be
  displayed correctly now, but my monk can't do that much damage; can
  someone test and report on the forum please?
- Fixed bug where openkore would say "Unknown uses" instead of the
  correct name of the player who had cast an area attack spell.
- And lots of other misc bug fixes.


Internal:
- Fully migrated to the logging framework. Thanks to floAt.
- Experimental plugin system.
- Interfaces are closer to completion --interface can now be used on the
  command line to select an interface to use. 'Console' is the default 
  interface. There is only one alternate interface at this point 'Tk' a stripped
  down version of modKore's Vx mode.
- Support packet 01D7 (Karasu).


Special thanks:
- Ven'Tatsu: Interface stuff, A* pathfinding enhancements.
- pmak: various bug fixes and enhancements, as well as assisting me with maintaining the website.
- jsteng: simplified move AI code, skill use improvements.
- anu: support for new deal packets.
- aputs: support for status ailments/looks.


==================
### OpenKore 1.2.1
==================

- Removed error handler; it seems to be causing problems.